<resources>

    <string name="app_name">My ToDo</string>
    <string name="hour_1">1 HR</string>
    <string name="min">%d MIN</string>
    <string name="description">Description …</string>
    <string name="title">Title</string>
    <string name="theme">Theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="delete_todo_in">Delete TODO In:</string>
    <string name="after_todo_is_marked_as_done">( After TODO is Marked As Done )</string>
    <string name="search">Search</string>
    <string name="empty_todo_list">Empty TODO List</string>
    <string name="add_new_todo">Add New ToDo</string>
    <string name="welcome">Welcome</string>
    <string name="your_name">Your Name</string>
    <string name="user_name">User Name</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="add_todo">Add ToDo</string>
    <string name="settings">Settings</string>
    <string name="save_todo">Save ToDo</string>

</resources>