<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsFragmentTopAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Settings"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/themeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/themeRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/themeRadioGroup" />

            <RadioGroup
                android:id="@+id/themeRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/lightThemeRadioButton"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/themeLabelTextView"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/lightThemeRadioButton"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:text="@string/light"
                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                <RadioButton
                    android:id="@+id/darkThemeRadioButton"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/dark"
                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/themeRadioGroup" />

            <TextView
                android:id="@+id/deleteTodoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/delete_todo_in"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoDeletionTimeSlider" />

            <com.google.android.material.slider.Slider

                android:id="@+id/todoDeletionTimeSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:stepSize="5"
                android:valueFrom="5"
                android:valueTo="60"
                app:layout_constraintEnd_toStartOf="@+id/timeStatusTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteTodoLabel" />

            <TextView
                android:id="@+id/timeStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/todoDeletionTimeSlider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/todoDeletionTimeSlider"
                tools:text="5 MIN" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/after_todo_is_marked_as_done"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/deleteTodoLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/deleteTodoLabel"
                app:layout_constraintTop_toTopOf="@+id/deleteTodoLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>